test/modules/standard/FileSystem/lydia/sameFile/dir_nonexistent.chpl
use FileSystem;

writeln(sameFile("../", "foo/"));
// Checking directory case.
// foo/ does not exist.
